--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>worldsingles</groupId>
   <artifactId>ws-commons</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1</version>
   <name>ws-commons</name>
 
   <description>Common utility functions and "extensions" to Clojure.</description>
-  <url>https://github.com/worldsingles/ws-commons</url>
+  <url>https://github.com/worldsingles/commons</url>
   <licenses>
     <license>
       <name>Eclipse Public License</name>
@@ -22,9 +22,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:worldsingles/ws-commons.git</connection>
-    <developerConnection>scm:git:git@github.com:worldsingles/ws-commons.git</developerConnection>
-    <url>https://github.com/worldsingles/ws-commons</url>
+    <connection>scm:git:git@github.com:worldsingles/commons.git</connection>
+    <developerConnection>scm:git:git@github.com:worldsingles/commons.git</developerConnection>
+    <url>https://github.com/worldsingles/commons</url>
     <tag>HEAD</tag>
   </scm>
 
