--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>worldsingles</groupId>
   <artifactId>ws-commons</artifactId>
-  <version>0.1.1</version>
+  <version>0.1.2-SNAPSHOT</version>
   <name>ws-commons</name>
 
   <description>Common utility functions and "extensions" to Clojure.</description>
@@ -25,7 +25,7 @@
     <connection>scm:git:git@github.com:worldsingles/commons.git</connection>
     <developerConnection>scm:git:git@github.com:worldsingles/commons.git</developerConnection>
     <url>https://github.com/worldsingles/commons</url>
-    <tag>HEAD</tag>
+    <tag>580681c84c641704dcc1e6f8a8bd0c1f910c5e42</tag>
   </scm>
 
   <dependencies>
